# Real-Time-Visual-Voice-Activity-Detection

./: .gitignore  README.md  pyproject.toml  requirements-stt.txt  requirements.txt  run_dashboard.py  run_webcam.py
src/visual_vad/: __init__.py  activity.py  config.py  dashboard.html  dashboard.py  mediapipe_backend.py  models.py  pipeline.py  selection.py  transcription.py
src/visual_vad.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_activity.py  test_cli.py  test_live_transcription.py  test_pipeline.py  test_selection.py  test_transcription.py
