[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "visual-vad"
version = "0.1.0"
description = "Real-time visual voice activity detection for a kiosk primary user"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24,<2",
    "opencv-python>=4.8,<5",
    "mediapipe==0.10.21",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
stt = ["faster-whisper>=1.1.0", "sounddevice>=0.4.6"]
stt-vosk = ["vosk>=0.3.45", "sounddevice>=0.4.6"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
visual_vad = ["dashboard.html"]
